fix: overflow bei teilnahme bei kleinem bildschirm verstecken

--- a/sass/inhalt/ansprache/_teilnahme.sass
+++ b/sass/inhalt/ansprache/_teilnahme.sass
@@ -7,6 +7,7 @@
 	z-index: 1
 	margin-bottom: -4vw
 	margin-top: -2.8vw
+	contain: paint
 	img
 		margin-right: -36vw
 		margin-left: -16vw
